--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[test.js]
+trim_trailing_whitespace = false
+
 [{package.json,package-lock.json}]
 indent_style = space
 indent_size = 2
