Support Node.js ESModules (v0.1.0) - Exactly this - Fixed readme badges Todo: Scrap module.exports and use Babel so we can support browsers/Deno

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
 	"plugins": ["prettier"],
     "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+    "sourceType": "module",
 	"env": {
         "node": true,
         "browser": true,
