--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
 	"plugins": ["prettier"],
     "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+    "parser": "babel-eslint",
     "sourceType": "module",
 	"env": {
         "node": true,
