Use babel for Node only. Better reflect what versions are supported. Browsers will be seperated into another preset.

--- a/babel.config.json
+++ b/babel.config.json
@@ -4,11 +4,7 @@
         "@babel/env",
             {
                 "targets": {
-                    "node": "4",
-                    "firefox": "34",
-                    "chrome": "41",
-                    "edge": "12",
-                    "safari": "9"
+                    "node": "0.1"
                 },
                 "spec": true
             }
