--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
 	},
 	"rules": {
 		"semi": ["error", "always"],
-		"curly": ["error", "all"],
+		"curly": ["error", "multi-line"],
 		"quotes": ["error", "double", {"avoidEscape": true, "allowTemplateLiterals": false}],
 		"eqeqeq": ["error", "smart"],
 		"no-multi-spaces": "error",
