--- a/babel.config.json
+++ b/babel.config.json
@@ -3,9 +3,7 @@
         [
             "@babel/env",
             {
-                "targets": {
-                    "node": "0.1"
-                },
+                "modules": "umd",
                 "spec": true
             }
         ]
