--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,5 @@
 {
+    "comments": false,
     "presets": [
         [
             "@babel/env",
@@ -6,6 +7,10 @@
                 "modules": "umd",
                 "spec": true
             }
+        ],
+        [
+            "minify",
+            {}
         ]
     ]
 }
