Disable typeof transform Babel does this by default for some reason. Symbol() never gets used meaning the polyfill is wasted space.

--- a/babel.config.json
+++ b/babel.config.json
@@ -5,7 +5,8 @@
             "@babel/env",
             {
                 "modules": "umd",
-                "spec": true
+                "spec": true,
+                "exclude": ["@babel/plugin-transform-typeof-symbol"]
             }
         ],
         [
