Add "bugfixes: true" to Babel config

--- a/babel.config.json
+++ b/babel.config.json
@@ -6,6 +6,7 @@
             {
                 "modules": "umd",
                 "spec": true,
+                "bugfixes": true,
                 "exclude": ["@babel/plugin-transform-typeof-symbol"]
             }
         ],
