--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "usefultags",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A tiny JavaScript library incorporating some useful template tag functions.",
   "main": "dist/usefulTags.js",
   "module": "usefulTags.mjs",
   "files": [
-    "usefulTags.mjs"
+    "usefulTags.mjs",
+    "usefulTags.d.ts"
   ],
+  "types": "usefulTags.d.ts",
   "scripts": {
     "test": "node test",
     "build": "npx babel usefulTags.mjs --out-file ./dist/usefulTags.js"
@@ -38,12 +40,12 @@
   },
   "homepage": "https://github.com/TheThunderGuyS/usefulTags#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/cli": "^7.12.7",
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-minify": "^0.5.1",
-    "eslint": "^7.13.0",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "2.1.2",
