--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usefultags",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A tiny JavaScript library incorporating some useful template tag functions.",
   "main": "dist/usefulTags.js",
   "module": "usefulTags.mjs",
@@ -40,15 +40,15 @@
   },
   "homepage": "https://github.com/TheThunderGuyS/usefulTags#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.7",
-    "@babel/core": "^7.12.7",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-minify": "^0.5.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "2.1.2",
+    "prettier": "^2.2.0",
     "requirejs": "^2.3.6"
   }
 }
