--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,7 +3,8 @@ name: Publish Packages on release
 on:
   # Run when a new release is published.
   release:
-    types: published
+    types:
+      - published
 
 jobs:
   publish:
@@ -12,10 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       # Configure and publish to NPM
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
-          registry-url: "https://registry.npmjs.org"
       - run: npm ci
       - run: npm run-script build
       - run: npm test
